# Venture

./: .gitignore  .vercelignore  AI_COLLAB_SPEC.md  BUILD_GUIDE.md  LICENSE  README.md  Venture-release-signed.apk.idsig  build-apk.cmd  build-apk.sh  index.html  package-lock.json  package.json  venture.bat  vite.config.ts
.cargo/: config.toml
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/src/: app_data.rs  chat.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  provider.rs
electron/: browser-summary-preview.cjs  main.cjs  preload.cjs
guidelines/: Guidelines.md
scripts/: ascii-banner.ps1  banner.bat  banner.js  banner.ps1  build-desktop.mjs  clean-dist.js  dev-control.js
src/: env.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  constants.ts  types.ts
src/app/components/: BrowserPanel.tsx  BrowserSummaryPanel.tsx  ChatArea.tsx  DiffPreview.tsx  FloatingTaskIndicator.tsx  MainLayout.tsx  ReasoningDisplay.tsx  RightPanelRail.tsx  SettingsSidebar.tsx  Sidebar.tsx  SidebarContextMenu.tsx  SidebarToggleButton.tsx  TaskDisplay.tsx  UsagePanel.tsx  WorkflowCanvas.tsx
src/app/core/: README.md
src/app/data/: mockData.ts
src/app/features/: README.md
src/app/hooks/: useChatComposer.ts  useChatScroll.ts  useClickOutside.ts  useGeneration.ts
src/app/services/: appDataService.ts  backendClient.ts  chatStreamService.ts  modelConfigService.ts  titleGenerationService.ts
src/app/store/: chatState.ts  useChatStore.ts  useHistoryStore.ts  (+3 more)
src/styles/: fonts.css  tailwind.css  theme.css
src/utils/: bannerPrinter.ts
(+41 files in other folders)
