[package]
name = "venture-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "venture_backend"
path = "src/lib.rs"

[[bin]]
name = "venture-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
directories = "5"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
bytes = "1"
async-stream = "0.3"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
